# neodb

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  FEDERATION.md  README.md  compose.yml  docker-compose.yml  manage.py  mkdocs.yml  mkdocs_hook.py  neodb.env.dist  neodb.env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  codeql-analysis.yml  deploy.yml  django.yml  docker-dev.yml  lint.yml  mirror.yml  preview-deploy.yml  publish-tags.yml  publish.yml  tests.yml
boofilsic/: settings.py  urls.py
catalog/: api.py  apis.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py  views_edit.py
catalog/book/: models.py  tests.py  utils.py
catalog/collection/: models.py
catalog/common/: __init__.py  downloaders.py  jsondata.py  migrations.py  mixins.py  models.py  sites.py  tests.py  utils.py
catalog/game/: models.py  tests.py
catalog/jobs/: __init__.py  discover.py  podcast.py
catalog/migrations/: 0001_initial.py  0001_initial_0_10.py  0002_fix_soft_deleted_edition.py  0002_initial.py  0003_podcast.py  0004_podcast_no_real_change.py  0005_bookstw.py  0006_auto_20230602_0258.py  0007_performance.py  0008_delete_historicalitem.py  0009_remove_tvepisode_show.py  0010_alter_item_polymorphic_ctype.py  0011_alter_externalresource_id_type_and_more.py  0011_remove_item_last_editor.py  0012_alter_model_i18n.py
catalog/movie/: models.py  tests.py
catalog/music/: models.py  tests.py  utils.py
catalog/performance/: models.py  tests.py
catalog/podcast/: models.py  tests.py
catalog/search/: external.py  models.py  typesense.py  (+1 more)
common/: api.py  apps.py  config.py  forms.py  models.py  setup.py  urls.py  utils.py  views.py
developer/: models.py  urls.py  views.py
doc/: catalog.md  configuration.md  development.md  install-docker.md  install.md
docker/: entrypoint.sh  start.sh
docs/: api.md  apps.md  configuration.md  development.md  features.md  index.md  install.md  origin.md  servers.json  servers.md  sites.md  troubleshooting.md  upgrade.md
journal/: api.py  apps.py  feeds.py  forms.py  mixins.py  models.py  renderers.py  tests.py  urls.py  views.py
legacy/: models.py  urls.py  views.py
locale/: django.pot
management/: admin.py  models.py  urls.py  views.py
mastodon/: admin.py  api.py  apps.py  auth.py  decorators.py  jobs.py  models.py  urls.py
misc/: neodb-manage  takahe-manage  upgrade.sh
social/: apps.py  models.py  tests.py  urls.py  views.py
takahe/: ap_handlers.py  apps.py  db_routes.py  html.py  jobs.py  models.py  uris.py  urls.py  utils.py  views.py
test_data/: https___anchor_fm_s_64d6bbe0_podcast_rss  https___api_bgm_tv_v0_subjects_15912  https___api_bgm_tv_v0_subjects_224973  https___api_bgm_tv_v0_subjects_228086  https___api_bgm_tv_v0_subjects_237  https___api_bgm_tv_v0_subjects_253  https___api_bgm_tv_v0_subjects_342254  https___api_bgm_tv_v0_subjects_431295  https___api_bgm_tv_v0_subjects_442025  https___api_bgm_tv_v0_subjects_7157  https___api_discogs_com_masters_469004  https___api_discogs_com_releases_13574140  https___api_discogs_com_releases_25829341  https___api_spotify_com_v1_albums_0I8vpSE1bSmysN2PhmHoQg  https___api_themoviedb_org_3_find_tt0314979_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt0314979_api_key_8964_language_zh_CN_external_source_imdb_id  https___api_themoviedb_org_3_find_tt0436992_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt0827573_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1159991_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1159991_api_key_8964_language_zh_CN_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1375666_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1699275_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1699275_api_key_8964_language_zh_CN_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1699276_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt1699276_api_key_8964_language_zh_CN_external_source_imdb_id  https___api_themoviedb_org_3_find_tt21599650_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_find_tt7660970_api_key_8964_language_en_US_external_source_imdb_id  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_de_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_en_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_es_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_fr_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_ja_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_ko_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_zh_CN_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_zh_HK_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_27205_api_key_8964_language_zh_TW_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_282758_api_key_8964_language_en_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_282758_api_key_8964_language_zh_CN_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_282758_api_key_8964_language_zh_HK_append_to_response_external_ids_credits  https___api_themoviedb_org_3_movie_282758_api_key_8964_language_zh_TW_append_to_response_external_ids_credits  (+106 more)
users/: account.py  admin.py  api.py  apis.py  apps.py  data.py  forms.py  middlewares.py  models.py  profile.py  tasks.py  tests.py  urls.py  views.py
(+523 files in other folders)
